<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<TextView
		android:paddingLeft="20dp"
		android:textColor="@color/green_16"
		android:text="@string/general_settings"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

	<TextView
		style="@style/setting_item_tv_style"
		android:id="@+id/id_fg_setting_tv_health_data"
		android:drawableLeft="@drawable/icon_24"
		android:text="@string/health_data" />

	<TextView
		style="@style/setting_item_tv_style"
		android:id="@+id/id_fg_setting_tv_reminder"
		android:drawableLeft="@drawable/icon_11"
		android:text="@string/settings_reminder" />

	<TextView
		style="@style/setting_item_tv_style"
		android:id="@+id/id_fg_setting_tv_unit_setting"
		android:drawableLeft="@drawable/ic_metric"
		android:text="@string/unit_setting" />

	<TextView
		style="@style/setting_item_tv_style"
		android:id="@+id/id_fg_setting_tv_language_setting_setting"
		android:drawableLeft="@drawable/ic_global"
		android:text="@string/language_select" />

	<TextView
		style="@style/setting_item_tv_style"
		android:id="@+id/id_fg_setting_tv_delete_all_data"
		android:drawableLeft="@drawable/ic_delete_48px"
		android:text="@string/delete_all_data" />
</LinearLayout>
