<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<include
		android:id="@+id/id_fg_unit_setting_toolbar"
		layout="@layout/toolbar" />

	<LinearLayout
		android:id="@+id/id_fg_unit_setting_ll_weight_container"
		style="@style/fg_health_data_item_container">

		<TextView
			style="@style/blackTextStyle"
			android:textSize="20sp"
			android:text="@string/weight_unit" />

		<TextView
			android:id="@+id/id_fg_unit_setting_tv_weight_unit"
			style="@style/grayTextStyle"
			android:text="@string/unit_kg"
			android:layout_marginTop="5dp" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/id_fg_unit_setting_ll_height_container"
		style="@style/fg_health_data_item_container">

		<TextView
			style="@style/blackTextStyle"
			android:textSize="20sp"
			android:text="@string/height_unit" />

		<TextView
			android:id="@+id/id_fg_unit_setting_tv_height_unit"
			style="@style/grayTextStyle"
			android:text="@string/unit_cm"
			android:layout_marginTop="5dp" />
	</LinearLayout>

</LinearLayout>