<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:orientation="vertical"
	android:layout_height="match_parent">

	<include layout="@layout/include_toolbar" />

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:visibility="gone">

				<TextView
					android:paddingTop="10dp"
					android:paddingLeft="20dp"
					android:textColor="@color/green_16"
					android:text="@string/account"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />

				<include layout="@layout/upload_layout" />
			</LinearLayout>

			<LinearLayout
				android:paddingTop="20dp"
				android:paddingLeft="20dp"
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView
					android:textColor="@color/green_16"
					android:text="@string/workout"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />

				<TextView
					android:id="@+id/sound_options"
					android:drawablePadding="30dp"
					android:gravity="center_vertical"
					android:drawableLeft="@drawable/icon_03"
					android:textColor="@color/black_00"
					android:text="@string/sound_options"
					android:layout_width="match_parent"
					android:layout_height="50dp" />
			</LinearLayout>

			<include layout="@layout/include_tts" />

			<include layout="@layout/include_general_settings" />

			<include layout="@layout/include_support" />

			<TextView
				android:padding="10dp"
				android:textColor="@color/green_16"
				android:gravity="center"
				android:text="@string/version"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />

		</LinearLayout>

	</androidx.core.widget.NestedScrollView>


</LinearLayout>

