<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="400dp">

	<ImageView
		android:layout_width="match_parent"
		android:layout_height="400dp"
		android:scaleType="centerCrop"
		android:src="@drawable/bg_exercise_rest" />

	<ImageView
		android:id="@+id/id_dialog_action_exit_iv_close"
		android:layout_width="50dp"
		android:layout_height="50dp"
		android:src="@drawable/ic_close"
		android:layout_alignParentRight="true"
		android:padding="15dp" />

	<ImageView
		android:id="@+id/id_dialog_action_exit_iv_logo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/ic_workout_full_body"
		android:layout_centerHorizontal="true"
		android:layout_below="@id/id_dialog_action_exit_iv_close" />

	<TextView
		android:id="@+id/id_dialog_action_exit_tv_tips"
		style="@style/whiteTextStyle"
		android:textSize="20sp"
		android:layout_below="@id/id_dialog_action_exit_iv_logo"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="18dp"
		android:text="@string/dialog_exit_tips" />

	<Button
		android:id="@+id/id_dialog_action_exit_btn_exit"
		android:layout_width="180dp"
		android:layout_height="40dp"
		android:layout_marginTop="60dp"
		android:background="@drawable/btn_action_exit"
		android:layout_centerHorizontal="true"
		android:text="@string/exit"
		android:textColor="@color/white"
		android:layout_below="@id/id_dialog_action_exit_tv_tips" />

	<Button
		android:id="@+id/id_dialog_action_exit_btn_delay"
		android:layout_width="180dp"
		android:layout_height="40dp"
		android:layout_marginTop="10dp"
		android:background="@drawable/btn_action_delay"
		android:layout_centerHorizontal="true"
		android:text="@string/delay"
		android:textColor="@color/white"
		android:layout_below="@id/id_dialog_action_exit_btn_exit" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:text="@string/comeback"
		android:textColor="@color/gray"
		android:layout_below="@id/id_dialog_action_exit_btn_delay"
		android:layout_centerHorizontal="true" />


</RelativeLayout>